# pm-agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
agent-backend/: .env.example  main.py  progress.md  pyproject.toml
agent-backend/agents/: __init__.py  top.py
agent-backend/agents/bottom/: __init__.py  search.py
agent-backend/agents/middle/: __init__.py  change.py  competitor.py  future.py  market.py  product.py
agent-backend/dag/: __init__.py  conditions.py  graph.py  nodes.py
agent-backend/llm/: __init__.py  base.py  deepseek.py
agent-backend/prompts/: __init__.py  templates.py
agent-backend/schemas/: __init__.py
agent-backend/search/: __init__.py  base.py  tavily.py
agent-backend/utils/: __init__.py  logger.py  progress.py
docs/: api.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/history/: page.tsx
src/app/login/: page.tsx
src/app/settings/: page.tsx
src/app/skills/: page.tsx
src/components/: AnalysisView.tsx  ChatInput.tsx  CrossInsightCard.tsx  DepartmentCard.tsx  DepartmentGrid.tsx  Greeting.tsx  HistoryRow.tsx  PlanningCard.tsx  RecommendationList.tsx  ReportView.tsx  ReviewBadge.tsx  RiskList.tsx  ScoreHero.tsx  ScoreRing.tsx  SettingsModal.tsx  Sidebar.tsx  SkillAddModal.tsx  SkillCard.tsx  SkillViewModal.tsx  SubAgentRow.tsx
src/data/: mockAnalysis.ts  mockReport.ts
src/hooks/: analysisReducer.ts  useAutoScroll.ts  useSSE.ts
src/lib/: sse.ts
src/stores/: analysisSession.ts  reportStore.ts  settingsStore.ts  skillStore.ts
src/types/: analysis.ts  history.ts  schemas.ts  skill.ts
(+3 files in other folders)
